--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+:root{
+    font-size: 16px;
+    font-family: "Open Sans", sans-serif;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
 *{
     box-sizing: border-box;
 }
@@ -6,57 +16,146 @@ header{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+    padding: 10px;
+    border-bottom: solid 2px grey;
+    box-shadow: 0 2px 10px 0 grey;
+    margin-bottom: 25px;
 }
+
+h1{
+    font-family: "Hedvig Letters Serif", serif;
+    
+}
+
+#new-dashboard-btn{
+    min-width: 100px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(90deg, pink, violet);
+    border: none;
+    cursor: pointer;
+    color: black;
+}
+#new-dashboard-btn:hover{
+    color: white;
+    box-shadow: 0 0 5px 1px grey;
+}
+
 
 #dashboard-container{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: baseline;
+    justify-content: space-evenly;
 }
 
+/*Dashboard component styles*/
 .dashboard{
-    background-color: pink;
+    border: solid 2px pink;
     width: 350px;
     margin: 10px auto;
 }
 
 .dashboard-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: blueviolet;
-    padding: 0 5px;
-    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 1fr 3fr 2fr;
+    background-color: violet;
 }
 
+.new-note-btn:hover{
+    filter: invert();
+}
+.toggle-btn-icon{
+    scale: 1.5;
+}
+
+.dashboard-header h4{
+    text-align: center;
+}
 .dashboard-btns{
-    background-color: blue;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.new-note-btn{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-color: transparent;
+    background-color: transparent;
+    cursor: pointer;
+}   
+.header-icons{
+    scale: 1.2;
 }
 
+.dashboard-notes-container{
+    padding: 5px;
+}
+
+/*Note component styles*/
 .note-container{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 5px 10px;
-    margin: 15px auto;
-    box-shadow: 0 2.5px 10px 0 grey;
+    padding: 5px 5px;
+    margin: 1px auto;
+    box-shadow: 0 2.5px 5px 0 grey;
+}
+
+.note-container:hover{
+    box-shadow: 0 2.5px 5px 0 green;
 }
 
 .note-textbox{
-    width: 75%;
+    width: 80%;
     background-color: white;
     border-radius: 2.5px;
     padding: 5px;
+    font-size: 0.9rem;
 }
 
 input[type="checkbox"]{
     scale: 1.5;
 }
 
+.delete-note-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    padding: 2.5px;
+    border-radius: 50%;
+    color: red;
+    border-color: transparent;
+}
+.delete-note-btn:hover{
+    color: darkred;
+}
+
+/*Use cases styles*/
+input[type="checkbox"], .delete-note-btn:hover{
+    cursor: pointer;
+}
+
+.trans-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border-color: transparent;
+    cursor: pointer;
+}/*Transparent buttons*/
+.trans-btn:hover{
+    filter: invert();
+}
 .hidden{
     display: none;
 }
