--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h1{
     
 }
 
-#new-dashboard-btn{
+#new-board-btn{
     min-width: 100px;
     padding: 5px;
     display: flex;
@@ -41,13 +41,12 @@ h1{
     cursor: pointer;
     color: black;
 }
-#new-dashboard-btn:hover{
-    color: white;
+#new-board-btn:hover{
     box-shadow: 0 0 5px 1px grey;
 }
 
 
-#dashboard-container{
+#boards-container{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -56,13 +55,13 @@ h1{
 }
 
 /*Dashboard component styles*/
-.dashboard{
+.board{
     border: solid 2px pink;
     width: 350px;
     margin: 10px auto;
 }
 
-.dashboard-header{
+.board-header{
     display: grid;
     grid-template-columns: 1fr 3fr 2fr;
     background-color: violet;
@@ -75,10 +74,11 @@ h1{
     scale: 1.5;
 }
 
-.dashboard-header h4{
+.board-header h4{
     text-align: center;
+    overflow-wrap: break-word;
 }
-.dashboard-btns{
+.board-btns{
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -95,7 +95,7 @@ h1{
     scale: 1.2;
 }
 
-.dashboard-notes-container{
+.board-notes-container{
     padding: 5px;
 }
 
