--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ header{
     justify-content: space-evenly;
     flex-wrap: nowrap;
     padding: 10px;
-    border-bottom: solid 2px grey;
+    border-bottom: solid 1px grey;
     box-shadow: 0 2px 10px 0 grey;
     margin-bottom: 25px;
 }
@@ -56,7 +56,7 @@ h1{
 
 /*Dashboard component styles*/
 .board{
-    border: solid 2px pink;
+    border: solid 2px violet;
     width: 350px;
     margin: 10px auto;
 }
@@ -65,6 +65,7 @@ h1{
     display: grid;
     grid-template-columns: 1fr 3fr 2fr;
     background-color: violet;
+    box-shadow: 0 2px 2px 0 grey;
 }
 
 .new-note-btn:hover{
@@ -79,7 +80,7 @@ h1{
     transform: rotate(-90deg);
 }
 
-.board-header h4{
+.board-header h3{
     text-align: center;
     overflow-wrap: break-word;
 }
