--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,14 @@ h1{
     
 }
 
+#header-btns-container{
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 #new-board-btn{
     min-width: 100px;
     padding: 5px;
@@ -40,12 +48,28 @@ h1{
     border: none;
     cursor: pointer;
     color: black;
+    margin: 2.5px auto;
 }
 #new-board-btn:hover{
     box-shadow: 0 0 5px 1px grey;
 }
 
-
+#clear-data-btn{
+    min-width: 100px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(90deg, pink, violet);
+    border: none;
+    cursor: pointer;
+    color: black;
+    margin: 2.5px auto;
+}
+#clear-data-btn:hover{
+    box-shadow: 0 0 5px 1px grey;
+}
 #boards-container{
     display: flex;
     flex-direction: row;
